--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "meteor-blaze",
-  "repository": { "type": "git", "url": "https://github.com/eface2face/meteor-blaze" },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eface2face/meteor-blaze"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "blaze.js",
@@ -8,5 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^2.4.1"
+  }
 }
