--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^2.4.1"
+    "jquery": "^2.1.3",
+    "lodash": "^2.4.1",
+    "meteor-core": "^1.0.0",
+    "meteor-observe-sequence": "^1.0.0",
+    "meteor-reactive-var": "^1.0.0"
   }
 }
