--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/eface2face/meteor-blaze"
   },
-  "version": "1.0.5", 
+ "version": "1.1.0",
   "description": "",
   "main": "blaze.js",
   "scripts": {
@@ -13,10 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^2.1.3",
-    "lodash": "^2.4.1",
     "meteor-core": "^1.0.0",
     "meteor-observe-sequence": "^1.0.0",
-    "meteor-reactive-var": "^1.0.0"
+    "meteor-reactive-var": "^1.0.0",
+    "meteor-tracker": "^1.0.0",
+    "meteor-html": "^1.0.0"
   }
 }
